--- a/frontend/index.html
+++ b/frontend/index.html
@@ -6,15 +6,27 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet">
     <style>
         .order-summary {
-          position: fixed;
-          top: 80px;
-          right: 20px;
-          width: 250px;
-          padding: 15px;
-          background: #f8f9fa;
-          border: 1px solid #dee2e6;
-          border-radius: 8px;
-          display: none;
+            position: fixed;
+            top: 80px;
+            right: 20px;
+            width: 250px;
+            padding: 15px;
+            background: #f8f9fa;
+            border: 1px solid #dee2e6;
+            border-radius: 8px;
+            display: none;
+        }
+        .categories-box {
+            float: right;
+            width: 200px;
+            margin-top: 20px;
+        }
+        .search-bar {
+            margin: 20px 0;
+        }
+        .category-button {
+            margin: 3px 0;
+            width: 100%;
         }
     </style>
 </head>
@@ -25,16 +37,26 @@
     <div class="container-fluid">
         <a class="navbar-brand" href="index.html">РадиоМаркет</a>
         <div class="d-flex">
-            <a href="#" class="btn btn-outline-light">История заказов</a>
+            <a href="history.html" class="btn btn-outline-light">История заказов</a>
         </div>
     </div>
 </nav>
 
-<!-- Main content -->
 <div class="container mt-4">
     <h1>Каталог радиодеталей</h1>
+
+    <!-- Search -->
+    <input type="text" id="search-input" class="form-control search-bar" placeholder="Поиск по названию...">
+
+    <!-- Categories -->
+    <div class="categories-box">
+        <h5>Категории:</h5>
+        <div id="categories-list" class="d-grid gap-1"></div>
+    </div>
+
+    <!-- Parts -->
     <div id="parts-list" class="row row-cols-1 row-cols-md-2 row-cols-lg-3 g-4">
-        <!-- JS вставит карточки сюда -->
+        <!-- JS вставит карточки деталей сюда -->
     </div>
 </div>
 
@@ -53,104 +75,160 @@
 <script>
     const BASE_API = 'http://127.0.0.1:8000';
     const API_URL = `${BASE_API}/api`;
-    const savedOrderId = localStorage.getItem('currentOrderId');
     const orderSummary = document.getElementById('order-summary');
+    const searchInput = document.getElementById('search-input');
+    let allParts = [];
+    let selectedCategory = null;
 
+    const savedOrderId = localStorage.getItem('currentOrderId');
     if (savedOrderId) {
-      window.currentOrderId = savedOrderId;
-      orderSummary.style.display = 'block';
-      updateOrderQuantity(savedOrderId);
+        window.currentOrderId = savedOrderId;
+        orderSummary.style.display = 'block';
+        updateOrderQuantity(savedOrderId);
     }
 
     function goToOrder() {
-      if (window.currentOrderId) {
-        localStorage.setItem('currentOrderId', window.currentOrderId);
-        window.location.href = 'order.html';
-      }
+        if (window.currentOrderId) {
+            localStorage.setItem('currentOrderId', window.currentOrderId);
+            window.location.href = 'order.html';
+        }
     }
 
-    async function fetchParts() {
-      const response = await fetch(`${API_URL}/parts/`, {
-        credentials: 'include'
-      });
-      const data = await response.json();
-      const list = document.getElementById('parts-list');
-      list.innerHTML = '';
+    async function fetchParts(category = null) {
+        let url = `${API_URL}/parts/`;
+        if (category) url += `?category=${encodeURIComponent(category)}`;
 
-      data.items.forEach(part => {
-          const card = document.createElement('div');
-          card.className = 'col';
+        const response = await fetch(url, { credentials: 'include' });
+        const data = await response.json();
+        allParts = data.items;
+        renderParts();
+    }
 
-          const schematicImg = part.schematic_url
-            ? `<img src="${BASE_API}${part.schematic_url}" alt="Схема" class="img-fluid my-2">`
-            : '';
+    async function fetchCategories() {
+        const response = await fetch(`${API_URL}/categories/`, { credentials: 'include' });
+        const categories = await response.json();
+        const list = document.getElementById('categories-list');
+        list.innerHTML = '';
 
-          card.innerHTML = `
-            <div class="card h-100">
-              <div class="card-body">
-                <h5 class="card-title">${part.name}</h5>
-                <p class="card-text">Категория: ${part.category_name}</p>
-                <p class="card-text">Напряжение: ${part.voltage} В</p>
-                <p class="card-text">Мощность: ${part.power} Вт</p>
-                ${part.datasheet_url ? `<a href="${BASE_API}${part.datasheet_url}" target="_blank">Документация</a><br>` : ''}
-                ${schematicImg}
-                <button class="btn btn-sm btn-success mt-3" onclick="addToOrder(${part.id})">Добавить в заказ</button>
-              </div>
-            </div>`;
+        // "Показать все"
+        const allBtn = document.createElement('button');
+        allBtn.id = 'show-all-btn';
+        allBtn.className = 'btn category-button';
+        allBtn.innerText = 'Показать все';
+        allBtn.dataset.category = '';
+        allBtn.onclick = () => {
+            selectedCategory = null;
+            fetchParts();
+            highlightSelectedCategory();
+        };
+        list.appendChild(allBtn);
 
-          list.appendChild(card);
+        categories.forEach(cat => {
+            const btn = document.createElement('button');
+            btn.className = 'btn category-button';
+            btn.innerText = cat.name;
+            btn.dataset.category = cat.name;
+            btn.onclick = () => {
+                selectedCategory = cat.name;
+                fetchParts(cat.name);
+                highlightSelectedCategory();
+            };
+            list.appendChild(btn);
+        });
+
+        highlightSelectedCategory();
+    }
+
+    function highlightSelectedCategory() {
+        const buttons = document.querySelectorAll('.category-button');
+        buttons.forEach(btn => {
+            const cat = btn.dataset.category;
+            if (cat === selectedCategory || (cat === '' && !selectedCategory)) {
+                btn.classList.remove('btn-outline-primary', 'btn-outline-secondary');
+                btn.classList.add('btn-primary');
+            } else {
+                btn.classList.remove('btn-primary');
+                btn.classList.add(cat ? 'btn-outline-primary' : 'btn-outline-secondary');
+            }
+        });
+    }
+
+    function renderParts() {
+        const list = document.getElementById('parts-list');
+        const query = searchInput.value.trim().toLowerCase();
+
+        const filtered = allParts.filter(part =>
+            part.name.toLowerCase().includes(query)
+        );
+
+        list.innerHTML = '';
+        filtered.forEach(part => {
+            const card = document.createElement('div');
+            card.className = 'col';
+
+            const schematicImg = part.schematic_url
+                ? `<img src="${BASE_API}${part.schematic_url}" alt="Схема" class="img-fluid my-2">`
+                : '';
+
+            card.innerHTML = `
+                <div class="card h-100">
+                  <div class="card-body">
+                    <h5 class="card-title">${part.name}</h5>
+                    <p class="card-text">Категория: ${part.category_name}</p>
+                    <p class="card-text">Напряжение: ${part.voltage} В</p>
+                    <p class="card-text">Мощность: ${part.power} Вт</p>
+                    ${part.datasheet_url ? `<a href="${BASE_API}${part.datasheet_url}" target="_blank">Документация</a><br>` : ''}
+                    ${schematicImg}
+                    <button class="btn btn-sm btn-success mt-3" onclick="addToOrder(${part.id})">Добавить в заказ</button>
+                  </div>
+                </div>`;
+            list.appendChild(card);
         });
     }
 
     async function addToOrder(partId) {
-      const existingOrderId = localStorage.getItem('currentOrderId');
+        const existingOrderId = localStorage.getItem('currentOrderId');
+        if (!existingOrderId) {
+            const response = await fetch(`${API_URL}/orders/`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                credentials: 'include',
+                body: JSON.stringify({ part_id: partId })
+            });
 
-      if (!existingOrderId) {
-        // Первый клик: создаём заказ
-        const response = await fetch(`${API_URL}/orders/`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
-          body: JSON.stringify({ part_id: partId })
-        });
-
-        if (response.ok) {
-          const order = await response.json();
-          window.currentOrderId = order.id;
-          localStorage.setItem('currentOrderId', order.id);
-          document.getElementById('order-summary').style.display = 'block';
-          updateOrderQuantity(order.id);
+            if (response.ok) {
+                const order = await response.json();
+                window.currentOrderId = order.id;
+                localStorage.setItem('currentOrderId', order.id);
+                orderSummary.style.display = 'block';
+                updateOrderQuantity(order.id);
+            }
         } else {
-          console.error('Ошибка при создании заказа');
-        }
+            const response = await fetch(`${API_URL}/orders/${existingOrderId}/add-item/`, {
+                method: 'POST',
+                headers: { 'Content-Type': 'application/json' },
+                credentials: 'include',
+                body: JSON.stringify({ part_id: partId })
+            });
 
-      } else {
-        // Есть заказ: добавляем позицию
-        const response = await fetch(`${API_URL}/orders/${existingOrderId}/add-item/`, {
-          method: 'POST',
-          headers: { 'Content-Type': 'application/json' },
-          credentials: 'include',
-          body: JSON.stringify({ part_id: partId })
-        });
-
-        if (response.ok) {
-          updateOrderQuantity(existingOrderId);
-        } else {
-          console.error('Ошибка при добавлении товара');
+            if (response.ok) {
+                updateOrderQuantity(existingOrderId);
+            }
         }
-      }
     }
-
 
     async function updateOrderQuantity(orderId) {
-      const response = await fetch(`${API_URL}/orders/${orderId}/positions-quantity/`, {
-        credentials: 'include'
-      });
-      const data = await response.json();
-      document.getElementById('items-count').innerText = `Позиции: ${data.positions_quantity}`;
+        const response = await fetch(`${API_URL}/orders/${orderId}/positions-quantity/`, {
+            credentials: 'include'
+        });
+        const data = await response.json();
+        document.getElementById('items-count').innerText = `Позиции: ${data.positions_quantity}`;
     }
 
+    searchInput.addEventListener('input', renderParts);
+
     fetchParts();
+    fetchCategories();
 </script>
 
 </body>
